# aurora-neware

./: .pre-commit-config.yaml  README.md  neware_api.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  publish.yml
aurora_neware/: mocks.py  neware.py  version.py
aurora_neware/api/: __init__.py  main.py
aurora_neware/cli/: main.py
neware_api/: __init__.py  neware.py  version.py
neware_api/cli/: main.py
tests/: conftest.py  mocks.py  test_api.py  test_cli.py  test_imports.py  test_neware.py
