[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neware_api"
dynamic = ["version"]
readme = "README.md"
description = "Python API for Neware Battery Testing System"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml==0.7.1",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "shortuuid==1.0.13",
    "six==1.16.0",
    "typer~=0.15",
    "tzdata==2024.2",
    "xmltodict==0.13.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit~=4.0",
    "pytest~=8.0",
]

[project.scripts]
neware = "neware_api.cli.main:app"

[tool.ruff]
line-length = 120  # Set the maximum line length
select = ["ALL"]
ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
]
fix = true
