[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aurora_neware"
dynamic = ["version"]
readme = "README.md"
description = "Python API for Neware Battery Testing System"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.1",
    "typer>=0.21.1",
]

[project.optional-dependencies]
dev = [
    "bumpver>=2025.1131",
    "pre-commit>=4.5.1",
    "pytest>=8.4.1",
    "ruff>=0.14.13",
]

[project.scripts]
neware = "aurora_neware.cli.main:app"

[tool.ruff]
line-length = 120  # Set the maximum line length
lint.select = ["ALL"]
lint.ignore = [
    "N806",
    "T201",
    "FA102",
    "PD901",
    "FBT001",
    "FBT002",
    "PLR2004",
    "TD002",
    "TD003",
    "D203",
    "D213",
    "COM812",
]
fix = true

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "S101", # asserts allowed in tests
    "PT011", # allow just checking for ValueError without match
    "SLF001", # allow private member access
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.bumpver]
current_version = "v0.2.2"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
tag_message = "Release {new_version}."
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"aurora_neware/version.py" = [
    '__version__ = "{pep440_version}"',
]
